prometheus (1.0.0+ds-1) UNRELEASED; urgency=medium

  * New upstream release. 1.0!
  * Update debian/copyright.
  * debian/patches:
    - Refresh patches.
    - Remove old patch for go 1.3 compatibility.
  * Add logrotate script.

 -- Martín Ferrari <tincho@debian.org>  Tue, 19 Jul 2016 04:11:36 +0100

prometheus (0.20.0+ds-1) unstable; urgency=medium

  * New upstream release.
  * Update lintian overrides for new binary.
  * Update dependencies.

 -- Martín Ferrari <tincho@debian.org>  Fri, 24 Jun 2016 16:15:53 +0000

prometheus (0.19.3+ds-1) unstable; urgency=medium

  * New upstream release.
  * debian/control: Remove obsolete golang-github-prometheus-log-dev
    dependency.
  * debian/control:
    - Update Vcs-Git to use HTTPS.
    - Switch to depend on golang-any instead of golang-go.
    - Change dh-golang dependency to work in backports.

 -- Martín Ferrari <tincho@debian.org>  Wed, 15 Jun 2016 11:49:27 +0000

prometheus (0.19.2+ds-2) unstable; urgency=medium

  * debian/rules: catch up with changes in linker flags so build information
    is shown again.

 -- Martín Ferrari <tincho@debian.org>  Tue, 31 May 2016 00:19:12 +0000

prometheus (0.19.2+ds-1) unstable; urgency=medium

  [ Filippo Giunchedi ]
  * debian/service: match sysvinit behaviour (send SIGTERM with 20s timeout,
    never send SIGKILL) Closes: #824842

  [ Martín Ferrari ]
  * New upstream release. Update dependencies.
  * Switch to use the golang-github-prometheus-client-model-dev package.
  * Improve the way datetimepicker is built.
  * Refresh patches.
  * Tidy up debian/rules.
  * debian/control: add versions to depends that solve bugs.

 -- Martín Ferrari <tincho@debian.org>  Mon, 30 May 2016 09:54:35 +0000

prometheus (0.18.0+ds-2) unstable; urgency=medium

  * Depend on fsnotify 1.3.0-3, which fixes build issues in arm64, ppc64, and
    ppc64el. Remove workaround patch.
  * Fix default configuration file. Closes: #822471.
  * debian/control: Update Standards-Version without changes.