@@ -15,7 +15,7 @@ rule_files:
   # - "first.rules"
   # - "second.rules"
 
-# A scrape configuration containing exactly one endpoint to scrape: 
+# A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
@@ -28,11 +28,11 @@ scrape_configs:
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
 
-    target_groups:
+    static_configs:
       - targets: ['localhost:9090']
 
   - job_name: node
     # If prometheus-node-exporter is installed, grab stats about the local
     # machine by default.
-    target_groups:
+    static_configs:
       - targets: ['localhost:9100']
