@@ -6,6 +6,7 @@ prometheus (1.0.0+ds-1) UNRELEASED; urgency=medium
     - Refresh patches.
     - Remove old patch for go 1.3 compatibility.
   * Add logrotate script.
+  * Update default configuration (breaking changes).
 
  -- Martín Ferrari <tincho@debian.org>  Tue, 19 Jul 2016 04:11:36 +0100
 
